2015-07-01  Vanessa Gil <vanessa.gil@artica.es> 
	
	* include/functions_incidents.php
	  operation/incidents/incident_detail.php: Fixed
	bug in counting tickets.

2015-07-01  Vanessa Gil <vanessa.gil@artica.es> 
	
	* integria_dbdata.sql
	  integria_demo.sql: Updated data.

2015-06-30  Vanessa Gil <vanessa.gil@artica.es> 
	
	* integria_dbdata.sql
	  godmode/setup/setup_maintenance.php: Change
	'Days to delete tickets', 'Days to delete work
	units' and 'Days to delete work orders' values by
	default.
	
	* include/functions_api.php: Fixed bug creating
	tickets.
	
	* include/functions_incidents.php: Show all
	associated incidents.

	* operation/incidents/incident_tickets.php: Clean
	code.

	* operation/incidents/incident_detail.php: Changed
	owner by default. Fixed bug editing tickets.

	* operation/inventories/inventory_import_objects.php:
	Added header to excel.

2015-06-26  Vanessa Gil <vanessa.gil@artica.es> 
	
	* include/export_csv.php
	  include/functions_incidents.php: Improve
	performance.

2015-06-25  Vanessa Gil <vanessa.gil@artica.es> 
	
	* operation/inventories/inventory_search.php: Added
	alphabetical order.

2015-06-24  Vanessa Gil <vanessa.gil@artica.es> 
	
	* operation/inventories/inventory_detail.php: Delete
	on cascade inventory data.

2015-06-24  Vanessa Gil <vanessa.gil@artica.es> 
	
	* include/functions_incidents.php: Improve
	perfomance.

	* godmode/grupos/configurar_grupo.php: Added help
	tip.

2015-06-23  Vanessa Gil <vanessa.gil@artica.es> 
	
	* operation/incidents/incident_detail.php: Fixed
	bug calculating limit of tickets.

	* operation/inventories/manage_objects.php: Add
	ID column.

2015-06-23  Vanessa Gil <vanessa.gil@artica.es> 
	
	* include/functions_api.php: Improved
	'api_create_incident' and 'api_update_incident'
	functions.

	* operation/incidents/type_detail.php: Fixed
	bug.

2015-06-22  Vanessa Gil <vanessa.gil@artica.es> 
	
	* include/functions_api.php: Improved
	'api_create_incident' and 'api_update_incident'.
