@@ -1,3 +1,11 @@
+2015-07-03  Vanessa Gil <vanessa.gil@artica.es> 
+	
+	* operation/projects/people_manager.php: Resized
+	combo.
+
+	* operation/incidents/incident_detail.php: Fixed
+	bug updating tickets.
+
 2015-07-01  Vanessa Gil <vanessa.gil@artica.es> 
 	
 	* include/functions_incidents.php
